k8s-deployment/ledger-messaging.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-messaging
  template:
    metadata:
      labels:
        app: ledger-messaging
    spec:
      containers:
        - name: main
          image: localhost:5000/ledgermessaging:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 4444
          resources:
            requests:
              memory: "50Mi"
              cpu: "0.1"
          volumeMounts:
            - name: fabricids
              mountPath: /fabric/application/wallet
            - name: tlscerts
              mountPath: /fabric/tlscacerts
      volumes:
        - name: fabricids
          configMap:
            name: app-fabric-ids-v1-map
        - name: tlscerts
          configMap:
            name: app-fabric-tls-v1-map
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-messaging
spec:
  ports:
    - name: http
      port: 4444
      protocol: TCP
  selector:
    app: ledger-messaging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-messaging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: "/api/ledger/(.*)"
            pathType: Prefix
            backend:
              service:
                name: ledger-messaging
                port:
                  number: 4444
