k8s-deployment/trade-engine.yaml
#
# Copyright IBM Corp. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  trade-engine
  template:
    metadata:
      labels:
        app: trade-engine
    spec:
      containers:
        - name: main
          image: localhost:5000/tradeengine:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: "50Mi"
              cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: trade-engine
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
  selector:
    app: trade-engine
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trade-engine
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: "/api/tradeengine/(.*)"
            pathType: Prefix
            backend:
              service:
                name: trade-engine
                port:
                  number: 9090
